# raindrop2obsidian

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  main.yml  pr.yml
src/: highlights.rs  main.rs  obsidian.rs  raindrop.rs
