[package]
name = "raindrop2obsidian"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.1.13", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11.16", features = ["json"]}
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["macros", "fs"]}
