[package]
name = "raindrop2obsidian"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.19", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11.18", features = ["json"]}
serde = { version = "1.0.178", features = ["derive"] }
tokio = { version = "1.29.1", features = ["macros", "fs"]}
